NEWS - OpenPrinting CUPS Filters v1.13.4 - 2017-02-17
-----------------------------------------------------

CHANGES IN V1.13.5

	- libcupsfilters: Do not generate a PPD file where the only
	  output data format is JPEG, as JPEG does not support
	  multi-page documents.
	- libcupsfilters: Let PPD generator skip broken page size
	  records and add warnings for debugging to the PPD.
	- libcupsfilters: Updated PPD generator to match with the
	  current GIT state of the one of CUPS.
	- braille: Automatically select a table according to the
	  current locale.
	- braille: Update for liblouis table list.
	- braille: Added support for text margins.
	- cups-browsed: When creating a local queue for a remote CUPS
	  printer, add the line '*APRemoteQueueID: ""' to the PPD file
	  so that CUPS sets the CUPS_PRINTER_REMOTE bit for the
	  printer type of the local queue (Bug #1386).

CHANGES IN V1.13.4

	- libcupsfilters: Let PPD generator for driverless printing
	  not error out when there is no urf-supported or
	  pwg-raster-document-resolution-supported IPP attribute,
	  simply accept the default resolution also from the
	  printer-resolution-default attribute or set a default value
	  of 300 dpi to get a working PPD file.
	- cups-browsed: Do not use deprecated names for IPP status
	  constants
	- cups-browsed: Corrected determination whether an IPP status
	  is an error, to avoid "Unable to create/modify CUPS queue
	  (Success)" and infinite repetition of a succeeded operation
	  (Debian bug #852436).

CHANGES IN V1.13.3

	- libcupsfilters: When auto-generating PPD files added support
	  for passing through JPEG input to printers which understand
	  JPEG. This is also done in CUPS-generated PPDs (Debian bug
	  #851499).
	- libcupsfilters: Added the "output-bin" option support from
	  CUPS' PPD generator to our PPD generator (CUPS Issue #4938).
	- cups-browsed: Make support for printers with IPv6 IP address
	  work. Both link-local and regular addresses work.
